# car-price-regression

./: README.md  main.py  pyproject.toml
api/: app.py
api/ai/: price.py
api/model/: brand.py  car.py
api/routes/: price.py
data/: brands.txt
models/: model.pkl  preprocessor.pkl  xgb_model.json
notebooks/: eda.ipynb  training.ipynb
src/api/: app.py
src/api/ai/: price.py
src/api/model/: brand.py  car.py  utils.py
src/api/routes/: price.py
src/pipeline/: train.py
src/transformers/: imputer.py  utils.py
src/ui/: ui.py
test/training/: test_preprocessing.py
training/: training.ipynb  utils.py
