[project]
name = "ml-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "scikit-learn>=1.7.0",
    "uvicorn>=0.35.0",
]
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

