[project]
name = "ml-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "category-encoders>=2.8.1",
    "fastapi>=0.116.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "streamlit>=1.47.0",
    "uvicorn>=0.35.0",
    "xgboost>=3.0.2",
]
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

